# modbus-proxy

./: CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  Makefile  README.md  log-verbose.conf  log.conf  modbus_proxy.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  python-app.yml  tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: config.yml  log-verbose.yml  log.yml  modbus-proxy.yaml  simple_rtu_client.py  simple_rtu_server.py  simple_tcp_client.py  simple_tcp_server.py
examples/kubernetes/: 00_namespace.yaml  10_modbus-proxy.configmap.yaml  20_modbus-proxy-deployment.yaml  30_modbus-proxy-service.yaml
src/: modbus_proxy.py
systemd/: modbus-proxy.service
tests/: __init__.py  conftest.py  test_modbus_proxy.py
