# -*- coding: utf-8 -*-
#
# This file is part of the modbus-proxy project
#
# Copyright (c) 2020-2021 Tiago Coutinho
# Distributed under the GPLv3 license. See LICENSE for more info

[metadata]
name = modbus-proxy
version = attr: modbus_proxy.__version__
author = Tiago Coutinho
author_email = coutinhotiago@gmail.com
license = GNU General Public License v3
license_file = LICENSE
description = ModBus TCP proxy
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
keywords = modbus, tcp, proxy
url = https://github.com/tiagocoutinho/modbus-proxy
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
py_modules = modbus_proxy
#packages = find:
package_dir =
    =src
zip_safe = true
python_requires = >=3.7
tests_require = pytest >=3

[options.entry_points]
console_scripts =
    modbus-proxy = modbus_proxy:main

[options.extras_require]
yaml = PyYAML
toml = toml

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[bumpversion]
current_version = 0.5.0
commit = True
tag = True

[bumpversion:file:src/modbus_proxy.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov-config=.coveragerc --cov modbus_proxy
	--cov-report html --cov-report term
	--durations=2 --verbose
