[bumpversion]
current_version = 0.6.2
commit = True
tag = True

[metadata]
name = modbus-proxy
version = attr: modbus_proxy.__version__
author = Tiago Coutinho
author_email = coutinhotiago@gmail.com
license = GNU General Public License v3
license_file = LICENSE
description = ModBus TCP proxy
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
keywords = modbus, tcp, proxy
url = https://github.com/tiagocoutinho/modbus-proxy
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Intended Audience :: Manufacturing
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
py_modules = modbus_proxy
package_dir = 
	=src
zip_safe = true
python_requires = >=3.7
tests_require = pytest >=3

[options.entry_points]
console_scripts = 
	modbus-proxy = modbus_proxy:main

[options.extras_require]
yaml = PyYAML
toml = toml
test = 
	pytest>=6
	pytest-cov>=2
	pytest-asyncio>=0.15
	flake8>=3.9
	tox>=3.24

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[bumpversion:file:src/modbus_proxy.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
max-line-length = 88
extend-ignore = E203

